# myCobotCpp

./: .gitignore  CMakeLists.txt  README.md  README_cn.md
include/: MyCobot.hpp  MyCobotExport.hpp
src/: myCobotExample.cpp
